first fase topbar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Smartempo</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <section class="container">
+
+  	<header>
+  		<div class="logo">
+  			<img src="img/Logo.png" alt="" width="100%">
+  		</div>
+  		<nav class="menu">
+  			<ul class="menu_ul">	
+  				<li class="menu_li"><a href="#">Menu<i class="arrow"></i></a></li>
+  			</ul>
+  		</nav>
+  	</section>
+
+  	<hr>
+
+  	<section class="content">
+  		<div class="content_img">
+  			<img src="img/image.jpg" alt="">
+  			<p class="content_p" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, similique, in. Laboriosam dolorum natus saepe maiores voluptatem, voluptatibus. Dignissimos corporis ipsum amet? Modi, cumque excepturi voluptates praesentium blanditiis, delectus dolores!</p>
+  		</div>
+  	</section>
+
+  </section>
 </body>
 </html>
