New changes in topbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   				<li class="menu_li"><a href="#">Menu<i class="arrow"></i></a></li>
   			</ul>
   		</nav>
-  	</section>
+  	</header>
 
   	<hr>
 
