--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Smartempo</title>
-</head>
-<body>
-  <section class="container">
-
-  	<header>
-  		<div class="logo">
-  			<img src="img/Logo.png" alt="" width="100%">
-  		</div>
-  		<nav class="menu">
-  			<ul class="menu_ul">	
-  				<li class="menu_li"><a href="#">Menu<i class="arrow"></i></a></li>
-  			</ul>
-  		</nav>
-  	</header>
-
-  	<hr>
-
-  	<section class="content">
-  		<div class="content_img">
-  			<img src="img/image.jpg" alt="">
-  			<p class="content_p" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, similique, in. Laboriosam dolorum natus saepe maiores voluptatem, voluptatibus. Dignissimos corporis ipsum amet? Modi, cumque excepturi voluptates praesentium blanditiis, delectus dolores!</p>
-  		</div>
-  	</section>
-
-  </section>
-</body>
+	</head>
+	<body>
+		<section class="main">
+			<section class="topbar">
+				<div class="topbar__logo">
+					<img src="img/logo.png" alt="Logo">
+				</div>
+				<div class="menu--m">
+					<p>Menu</p><i class="arrow"></i>
+				</div>
+				<div class="mainmenu">
+					<ul>
+						<li>Item1</li>
+						<li>Item2</li>
+						<li>Item3</li>
+						<li>item4</li>
+						<li>Item5</li>
+					</ul>
+				</div>
+			</section>
+		</section>
+  </body>
 </html>
