Correction of the class menu and the css code is corrected

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Smartempo</title>
+  <title>Smartempo frontend</title>
 	</head>
 	<body>
 		<section class="main">
@@ -13,16 +13,16 @@
 				<div class="topbar__logo">
 					<img src="img/logo.png" alt="Logo">
 				</div>
-				<div class="menu--m">
+				<div class="menu menu--mobile">
 					<p>Menu</p><i class="arrow"></i>
 				</div>
-				<div class="mainmenu">
+				<div class="menu">
 					<ul>
-						<li>Item1</li>
-						<li>Item2</li>
-						<li>Item3</li>
-						<li>item4</li>
-						<li>Item5</li>
+						<li class="menu__item">Item1</li>
+						<li class="menu__item">Item2</li>
+						<li class="menu__item">Item3</li>
+						<li class="menu__item">item4</li>
+						<li class="menu__item">Item5</li>
 					</ul>
 				</div>
 			</section>
