--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Smartempo frontend</title>
-	</head>
+</head>
 	<body>
 		<section class="main">
 			<section class="topbar">
@@ -18,12 +18,30 @@
 				</div>
 				<div class="menu">
 					<ul>
-						<li class="menu__item">Item1</li>
-						<li class="menu__item">Item2</li>
-						<li class="menu__item">Item3</li>
-						<li class="menu__item">item4</li>
-						<li class="menu__item">Item5</li>
+						<li class="menu__item"><a href="">Item1</a></li>
+						<li class="menu__item"><a href="">Item2</a></li>
+						<li class="menu__item"><a href="">Item3</a></li>
+						<li class="menu__item"><a href="">item4</a></li>
+						<li class="menu__item"><a href="">Item5</a></li>
 					</ul>
+				</div>
+			</section>
+			<!--end topbar-->
+
+			<section class="block">
+				<div class="block__image block__image--background block__image--height">
+					<div class="button">
+						<button class="button__play button--color">></button>
+						<button class="button__text button--color">What´s new in stpo</button>
+					</div>
+				</div>
+				<div class="block__text">
+					<p class="block__text--size block__text--white block__text--padding">
+					Create bolder sounds with Live’s new devices. Stay in the flow with a multitude of workflow improvements. Do even more away from the computer with Push. Build your sound with a curated library. And get the unlimited potential of Max for Live, seamlessly built in.
+					</p>
+				</div>
+				<div class="block__image">
+					<img class="block__image--padding" src="img/Capture2.png" alt="">
 				</div>
 			</section>
 		</section>
