--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="fonts.css">
   <title>Smartempo frontend</title>
 </head>
 	<body>
 		<section class="main">
+			<!--start topbar-->
 			<section class="topbar">
 				<div class="topbar__logo">
-					<img src="img/logo.png" alt="Logo">
+					<img class="topbar__logo--img" src="img/logo.png" alt="Logo">
 				</div>
 				<div class="menu menu--mobile">
 					<p>Menu</p><i class="arrow"></i>
 				</div>
 				<div class="menu">
-					<ul>
-						<li class="menu__item"><a href="">Item1</a></li>
-						<li class="menu__item"><a href="">Item2</a></li>
-						<li class="menu__item"><a href="">Item3</a></li>
-						<li class="menu__item"><a href="">item4</a></li>
-						<li class="menu__item"><a href="">Item5</a></li>
+					<ul class="menu__list">
+						<li class="menu__item"><a href="">About Us</li>
+						<li class="menu__item"><a href="">Services</a></li>
+						<li class="menu__item"><a href="">Industries</a></li>						<li class="menu__item"><a href="">Demos</a></li>
+						<li class="menu__item"><a href="">Blog</a></li>
+						<li class="menu__item"><a href="">Contact</a></li>
 					</ul>
 				</div>
 			</section>
