First section correted

--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
 			</section>
 			<!--end topbar-->
 
-			<section class="block">
-				<div class="block__image block__image--background block__image--height">
+			<div class="blockFullWidthImg">
 					<div class="button">
-						<button class="button__play button--color">></button>
-						<button class="button__text button--color">What´s new in stpo</button>
+						<button class="button__play">></button>
+						<button class="button__text">What´s new in stpo</button>
 					</div>
 				</div>
-				<div class="block__text">
-					<p class="block__text--size block__text--white block__text--padding">
+				<div class="blockTextBold">
+					<p>
 					Create bolder sounds with Live’s new devices. Stay in the flow with a multitude of workflow improvements. Do even more away from the computer with Push. Build your sound with a curated library. And get the unlimited potential of Max for Live, seamlessly built in.
 					</p>
 				</div>
-				<div class="block__image">
-					<img class="block__image--padding" src="img/Capture2.png" alt="">
+				<div class="blockImg">
+					<img src="img/Capture2.png" alt="">
 				</div>
-			</section>
+
 		</section>
   </body>
 </html>
