Changes in the class names

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			<!--end topbar-->
 
 			<div class="blockFullWidthImg">
-					<div class="button">
-						<button class="button__play">></button>
-						<button class="button__text">What´s new in stpo</button>
+					<div class="buttonOpenModal">
+						<button class="buttonOpenModal__play">></button>
+						<button class="buttonOpenModal__text">What´s new in stpo</button>
 					</div>
 				</div>
 				<div class="blockTextBold">
@@ -41,7 +41,7 @@
 					Create bolder sounds with Live’s new devices. Stay in the flow with a multitude of workflow improvements. Do even more away from the computer with Push. Build your sound with a curated library. And get the unlimited potential of Max for Live, seamlessly built in.
 					</p>
 				</div>
-				<div class="blockImg">
+				<div class="blockMarginImg">
 					<img src="img/Capture2.png" alt="">
 				</div>
 
