heigth correction of the topbar, add font Arboria bold in html tag and modify the class menu__item

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 			<!--start topbar-->
 			<section class="topbar">
 				<div class="topbar__logo">
-					<img class="topbar__logo--img" src="img/logo.png" alt="Logo">
+					<img src="img/logo.png" alt="Logo">
 				</div>
 				<div class="menu menu--mobile">
 					<p>Menu</p><i class="arrow"></i>
 				</div>
 				<div class="menu">
 					<ul class="menu__list">
-						<li class="menu__item"><a href="">About Us</li>
-						<li class="menu__item"><a href="">Services</a></li>
-						<li class="menu__item"><a href="">Industries</a></li>						<li class="menu__item"><a href="">Demos</a></li>
-						<li class="menu__item"><a href="">Blog</a></li>
-						<li class="menu__item"><a href="">Contact</a></li>
+						<li class="menu__list__item"><a href="">About Us</li>
+						<li class="menu__list__item"><a href="">Services</a></li>
+						<li class="menu__list__item"><a href="">Industries</a></li>
+						<li class="menu__list__item"><a href="">Demos</a></li>
+						<li class="menu__list__item"><a href="">Blog</a></li>
+						<li class="menu__list__item"><a href="">Contact</a></li>
 					</ul>
 				</div>
 			</section>
