Block text and full image

--- a/index.html
+++ b/index.html
@@ -32,19 +32,24 @@
 			<!--end topbar-->
 
 			<div class="blockFullWidthImg">
-					<div class="buttonOpenModal">
-						<button class="buttonOpenModal__play">></button>
-						<button class="buttonOpenModal__text">What´s new in stpo</button>
-					</div>
+				<div class="buttonOpenModal">
+					<button class="buttonOpenModal__play">></button>
+					<button class="buttonOpenModal__text">What´s new in stpo</button>
 				</div>
-				<div class="blockTextBold">
-					<p>
-					Create bolder sounds with Live’s new devices. Stay in the flow with a multitude of workflow improvements. Do even more away from the computer with Push. Build your sound with a curated library. And get the unlimited potential of Max for Live, seamlessly built in.
-					</p>
-				</div>
-				<div class="blockMarginImg">
-					<img src="img/Capture2.png" alt="">
-				</div>
+			</div>
+			<div class="blockTextBold">
+				<p>
+				Create bolder sounds with Live’s new devices. Stay in the flow with a multitude of workflow improvements. Do even more away from the computer with Push. Build your sound with a curated library. And get the unlimited potential of Max for Live, seamlessly built in.
+				</p>
+			</div>
+			<div class="blockMarginImg">
+				<img src="img/Capture2.png" alt="">
+			</div>
+			<div class="fullWidthImg"><img src="img/nat.jpeg" alt=""></div>
+			<div class="blockTextNotice">
+				<h1 class="blockTextNotice__title">Services</h1>
+				<p class="blockTextNotice__par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+			</div>
 
 		</section>
   </body>
