changes of class name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</section>
 			<!--end topbar-->
 
-			<div class="blockFullWidthImg">
+			<div class="blockBgImg">
 				<div class="buttonOpenModal">
 					<button class="buttonOpenModal__play">></button>
 					<button class="buttonOpenModal__text">What´s new in stpo</button>
@@ -45,10 +45,10 @@
 			<div class="blockMarginImg">
 				<img src="img/Capture2.png" alt="">
 			</div>
-			<div class="fullWidthImg"><img src="img/nat.jpeg" alt=""></div>
-			<div class="blockTextNotice">
-				<h1 class="blockTextNotice__title">Services</h1>
-				<p class="blockTextNotice__par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+			<div class="blockFullWidthImg"><img src="img/nat.jpeg" alt=""></div>
+			<div class="blockTitleText">
+				<h1 class="blockTitleText__title">Services</h1>
+				<p class="blockTitleText__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 			</div>
 
 		</section>
