First stage of the footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,56 @@
 				<h1 class="blockTitleText__title">Services</h1>
 				<p class="blockTitleText__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 			</div>
-
+			<section class="footer">
+				<div class="blockFooter">
+					<div class="blockTitleTextSmall">
+						<h1 class="blockTitleTextSmall__title">Services</h1>
+						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+					</div>
+					<div class="blockTitleTextSmall">
+						<h1 class="blockTitleTextSmall__title">Services</h1>
+						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+					</div>
+				</div>
+				<div class="blockFooter">
+					<div class="blockTitleTextSmall">
+						<h1 class="blockTitleTextSmall__title">Services</h1>
+						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+					</div>
+					<div class="blockTitleTextSmall">
+						<h1 class="blockTitleTextSmall__title">Services</h1>
+						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+					</div>
+				</div>
+				<div class="blockFooter">
+					<div class="blockTitleTextSmall">
+						<h1 class="blockTitleTextSmall__title">Services</h1>
+						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+					</div>
+					<div class="blockParner">
+						<img src="img/wf.png" alt="">
+						<img src="img/marketo.jpg" alt="">
+						<img src="img/sales.png	" alt="">
+						<img src="img/hubs.png" alt="">
+					</div>
+				</div>
+				<div class="blockSuscribe">
+					<label for="email"><input type="text" name="email" placeholder="Email Address" /></label>
+					<button class="buttonOpenModal__text">Subscribe</button>
+				</div>
+				<div class="footerMenu">
+					<div class="mwnu footerMenu__menu">
+						<ul class="menu__list">
+							<li class="menu__list__item"><a href="">About Us</li>
+							<li class="menu__list__item"><a href="">Services</a></li>
+							<li class="menu__list__item"><a href="">Industries</a></li>
+							<li class="menu__list__item"><a href="">Demos</a></li>
+							<li class="menu__list__item"><a href="">Blog</a></li>
+							<li class="menu__list__item"><a href="">Contact</a></li>
+						</ul>
+					</div>
+					<div class="footerMenuImg"><img src="img/logof.png" alt="Logo"></div>				</div>
+			</section>
 		</section>
   </body>
 </html>
