changes in class name

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<h1 class="blockTitleText__title">Services</h1>
 				<p class="blockTitleText__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 			</div>
-			<section class="footer">
+			<section class="footerContainer">
 				<div class="blockFooter">
 					<div class="blockTitleTextSmall">
 						<h1 class="blockTitleTextSmall__title">Services</h1>
@@ -76,7 +76,7 @@
 						<h1 class="blockTitleTextSmall__title">Services</h1>
 						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 					</div>
-					<div class="blockParner">
+					<div class="blockPartner">
 						<img src="img/wf.png" alt="">
 						<img src="img/marketo.jpg" alt="">
 						<img src="img/sales.png	" alt="">
