changes display flex for display grid in footer nad new block of two columns

--- a/index.html
+++ b/index.html
@@ -50,55 +50,57 @@
 				<h1 class="blockTitleText__title">Services</h1>
 				<p class="blockTitleText__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 			</div>
+			<div class="blockTextTwoColumns">
+				<p class="blockTextTwoColumns__title">Demos</p>
+				<p class="blockTextTwoColumns__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum quos nam natus eos quibusdam atque totam odio laboriosam minus consectetur sapiente quae eum asperiores, sit ullam fugit ratione blanditiis incidunt!</p>
+				<p class="blockTextTwoColumns__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, assumenda nobis alias repellat officia explicabo ad, in obcaecati nam placeat accusamus dolorum, facere ex! Vero molestiae recusandae ipsam expedita ab.</p>
+			</div>
 			<section class="footerContainer">
-				<div class="blockFooter">
-					<div class="blockTitleTextSmall">
-						<h1 class="blockTitleTextSmall__title">Services</h1>
-						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
-					</div>
-					<div class="blockTitleTextSmall">
-						<h1 class="blockTitleTextSmall__title">Services</h1>
-						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
-					</div>
+				<div class="footerLogo">
+					<img src="img/logo.png" alt="">
 				</div>
-				<div class="blockFooter">
-					<div class="blockTitleTextSmall">
-						<h1 class="blockTitleTextSmall__title">Services</h1>
-						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
-					</div>
-					<div class="blockTitleTextSmall">
-						<h1 class="blockTitleTextSmall__title">Services</h1>
-						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
-					</div>
+				<div class="blockTitleTextSmall">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 				</div>
-				<div class="blockFooter">
-					<div class="blockTitleTextSmall">
-						<h1 class="blockTitleTextSmall__title">Services</h1>
-						<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
-					</div>
-					<div class="blockPartner">
-						<img src="img/wf.png" alt="">
-						<img src="img/marketo.jpg" alt="">
-						<img src="img/sales.png	" alt="">
-						<img src="img/hubs.png" alt="">
-					</div>
+				<div class="blockTitleTextSmall">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 				</div>
-				<div class="blockSuscribe">
-					<label for="email"><input type="text" name="email" placeholder="Email Address" /></label>
-					<button class="buttonOpenModal__text">Subscribe</button>
+				<div class="blockTitleTextSmall">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+				</div>
+				<div class="blockTitleTextSmall">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+				</div>
+				<div class="blockTitleTextSmall">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+				</div>
+				<div class="blockPartner">
+					<div class="blockPartner__title">Partners</div>
+					<img src="img/wf.png" alt="">
+					<img src="img/marketo.jpg" alt="">
+					<img src="img/sales.png	" alt="">
+					<img src="img/hubs.png" alt="">
+				</div>
+				<div class="blockSubscribe">
+					<label for="email"><input class="blockSubscribe__input blockSubscribe__input--background" type="text" name="email" placeholder="Email Address" /></label>
+					<button class="buttonOpenModal__text buttonOpenModal__text--height">Subscribe</button>
 				</div>
 				<div class="footerMenu">
-					<div class="mwnu footerMenu__menu">
-						<ul class="menu__list">
-							<li class="menu__list__item"><a href="">About Us</li>
-							<li class="menu__list__item"><a href="">Services</a></li>
-							<li class="menu__list__item"><a href="">Industries</a></li>
-							<li class="menu__list__item"><a href="">Demos</a></li>
-							<li class="menu__list__item"><a href="">Blog</a></li>
-							<li class="menu__list__item"><a href="">Contact</a></li>
-						</ul>
-					</div>
-					<div class="footerMenuImg"><img src="img/logof.png" alt="Logo"></div>				</div>
+					<ul class="footerMenu__list">
+						<li class="footerMenu__list__item"><a href="">About Us</li>
+						<li class="footerMenu__list__item"><a href="">Services</a></li>
+						<li class="footerMenu__list__item"><a href="">Industries</a></li>
+						<li class="footerMenu__list__item"><a href="">Demos</a></li>
+						<li class="footerMenu__list__item"><a href="">Blog</a></li>
+						<li class="footerMenu__list__item"><a href="">Contact</a></li>
+						<img class="footerMenuImg" src="img/logof.png" alt="Logo">
+					</ul>
+				</div>
 			</section>
 		</section>
   </body>
