Changes in blocks mobile

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 			<div class="blockMarginImg">
 				<img src="img/Capture2.png" alt="">
 			</div>
+			<div class="blockTitleText">
+				<h1 class="blockTitleText__title">Services</h1>
+				<p class="blockTitleText__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+			</div>
 			<div class="blockFullWidthImg"><img src="img/nat.png" alt=""></div>
 			<div class="blockTitleText">
 				<h1 class="blockTitleText__title">Services</h1>
@@ -72,19 +76,18 @@
 				<p class="blockTextTwoColumns__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, assumenda nobis alias repellat officia explicabo ad, in obcaecati nam placeat accusamus dolorum, facere ex! Vero molestiae recusandae ipsam expedita ab.</p>
 			</div>
 			<div class="blockFormulary">
-				<label for="name"><input type="text" name="FirstName" placeholder="First Name" /></label>
-				<label for="name"><input type="text" name="LastName" placeholder="Last Name" /></label>
-				<label for="name"><input type="text" name="EmailAddress" placeholder="Email Address" /></label>
-				<label for="name"><input type="text" name="Title" placeholder="Title" /></label>
-				<label for="name"><input type="text" name="Company" placeholder="Company" /></label>
-				<label for="name"><input type="text" name="YourMessage" placeholder="Your Message" /></label>
+				<label for="FirstName"><input type="text" name="FirstName" placeholder="First Name" /></label>
+				<label for="LastName"><input type="text" name="LastName" placeholder="Last Name" /></label>
+				<label for="EmailAddress"><input type="text" name="EmailAddress" placeholder="Email Address" /></label>
+				<label for="Title"><input type="text" name="Title" placeholder="Title" /></label>
+				<label for="Company"><input type="text" name="Company" placeholder="Company" /></label>
+				<label for="YourMessage"><input type="text" name="YourMessage" placeholder="Your Message" /></label>
 			</div>
 			<section class="footerContainer">
 				<div class="footerLogo">
 					<img src="img/logo.png" alt="">
 				</div>
 				<div class="blockTitleTextSmall">
-					<h1 class="blockTitleTextSmall__title">Services</h1>
 					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 				</div>
 				<div class="blockTitleTextSmall">
@@ -125,6 +128,37 @@
 						<img class="footerMenuImg" src="img/logof.png" alt="Logo">
 					</ul>
 				</div>
+			</section>
+			<section class="footerMobile">
+				<div class="footerMobile__logo">
+					<img src="img/logo.png" alt="">
+				</div>
+				<div class="blockTitleTextSmall--mobile">
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+				</div>
+				<div class="blockTitleTextSmall--mobile">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+				</div>
+				<div class="blockTitleTextSmall--mobile">
+					<h1 class="blockTitleTextSmall__title">Services</h1>
+					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
+				</div>
+				<div class="blockSubscribeMobile">
+					<label for="email"><input class="blockSubscribeMobile__input blockSubscribe__input--background" type="text" name="email" placeholder="Email Address" /></label>
+					<button class="buttonOpenModalMobile__text">Subscribe</button>
+				</div>
+				<div class="footerMenuMobile">
+					<ul class="footerMenuMobile__list">
+						<li class="footerMenuMobile__list__item"><a href="">About Us</li>
+						<li class="footerMenuMobile__list__item"><a href="">Services</a></li>
+						<li class="footerMenuMobile__list__item"><a href="">Industries</a></li>
+						<li class="footerMenuMobile__list__item"><a href="">Demos</a></li>
+						<li class="footerMenuMobile__list__item"><a href="">Blog</a></li>
+						<li class="footerMenuMobile__list__item"><a href="">Contact</a></li>
+					</ul>
+				</div>
+				<img class="footerMenuImgMobile" src="img/logof.png" alt="Logo">
 			</section>
 		</section>
   </body>
