Changes for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="topbar__logo">
 					<img src="img/logo.png" alt="Logo">
 				</div>
-				<div class="menu menu--mobile">
+				<div class="menu--mobile">
 					<p>Menu</p><i class="arrow"></i>
 				</div>
 				<div class="menu">
@@ -85,7 +85,7 @@
 			</div>
 			<section class="footerContainer">
 				<div class="footerLogo">
-					<img src="img/logo.png" alt="">
+					<img src="img/log.png" alt="">
 				</div>
 				<div class="blockTitleTextSmall">
 					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
@@ -119,7 +119,7 @@
 				</div>
 				<div class="footerMenu">
 					<ul class="footerMenu__list">
-						<li class="footerMenu__list__item"><a href="">About Us</li>
+						<li class="footerMenu__list__item"><a href="">About Us</a></li>
 						<li class="footerMenu__list__item"><a href="">Services</a></li>
 						<li class="footerMenu__list__item"><a href="">Industries</a></li>
 						<li class="footerMenu__list__item"><a href="">Demos</a></li>
