Correction in the mobile view

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 				<img class="blockInfo__img" src="img/engranaje.png" alt="">
 				<img class="blockInfo__img" src="img/engranaje.png" alt="">
 			</div>
+			<div class="blockInfoThree blockInfoThree--mobile">
+				<img class="blockInfo__img" src="img/engranaje.png" alt="">
+				<img class="blockInfo__img" src="img/engranaje.png" alt="">
+				<img class="blockInfo__img" src="img/engranaje.png" alt="">
+			</div>
+			<div class="blockInfoOne">
+				<img class="blockInfo__img" src="img/engranaje.png" alt="">
+			</div>
 			<div class="blockThreeImg">
 				<img class="blockThreeImg__img1" src="img/img1.png" alt="Imagen 1">
 				<img class="blockThreeImg__img2" src="img/img1.png" alt="Imagen 1">
@@ -83,6 +91,7 @@
 				<label for="Company"><input type="text" name="Company" placeholder="Company" /></label>
 				<label for="YourMessage"><input type="text" name="YourMessage" placeholder="Your Message" /></label>
 			</div>
+			<!--start footer section-->
 			<section class="footerContainer">
 				<div class="footerLogo">
 					<img src="img/log.png" alt="">
@@ -114,8 +123,8 @@
 					<img src="img/hubs.png" alt="">
 				</div>
 				<div class="blockSubscribe">
-					<label for="email"><input class="blockSubscribe__input blockSubscribe__input--background" type="text" name="email" placeholder="Email Address" /></label>
-					<button class="buttonOpenModal__text buttonOpenModal__text--height">Subscribe</button>
+					<label for="email"><input class="blockSubscribe__input" type="text" name="email" placeholder="Email Address" /></label>
+					<button class="blockSubscribe__button">Subscribe</button>
 				</div>
 				<div class="footerMenu">
 					<ul class="footerMenu__list">
@@ -125,10 +134,13 @@
 						<li class="footerMenu__list__item"><a href="">Demos</a></li>
 						<li class="footerMenu__list__item"><a href="">Blog</a></li>
 						<li class="footerMenu__list__item"><a href="">Contact</a></li>
-						<img class="footerMenuImg" src="img/logof.png" alt="Logo">
+						<img class="footerMenuImg" src="img/logf.png" alt="Logo">
 					</ul>
 				</div>
 			</section>
+			<!--end footer section-->
+
+			<!--start footer section mobile-->
 			<section class="footerMobile">
 				<div class="footerMobile__logo">
 					<img src="img/logo.png" alt="">
@@ -145,7 +157,7 @@
 					<p class="blockTitleTextSmall__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate nobis pariatur nesciunt quas, quod quibusdam unde provident molestias fuga reiciendis soluta minima! Adipisci eum eligendi cum debitis delectus possimus?</p>
 				</div>
 				<div class="blockSubscribeMobile">
-					<label for="email"><input class="blockSubscribeMobile__input blockSubscribe__input--background" type="text" name="email" placeholder="Email Address" /></label>
+					<label for="email"><input class="blockSubscribeMobile__input" type="text" name="email" placeholder="Email Address" /></label>
 					<button class="buttonOpenModalMobile__text">Subscribe</button>
 				</div>
 				<div class="footerMenuMobile">
@@ -158,8 +170,9 @@
 						<li class="footerMenuMobile__list__item"><a href="">Contact</a></li>
 					</ul>
 				</div>
-				<img class="footerMenuImgMobile" src="img/logof.png" alt="Logo">
+				<img class="footerMenuImgMobile" src="img/logf.png" alt="Logo">
 			</section>
+			<!--end footer section mobile-->
 		</section>
   </body>
 </html>
