corrected view subscribe and menu footer

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 				<label for="Title"><input type="text" name="Title" placeholder="Title" /></label>
 				<label for="Company"><input type="text" name="Company" placeholder="Company" /></label>
 				<label for="YourMessage"><input type="text" name="YourMessage" placeholder="Your Message" /></label>
+				<button class="blockFormulary__button">Send</button>
 			</div>
 			<!--start footer section-->
 			<section class="footerContainer">
@@ -134,9 +135,9 @@
 						<li class="footerMenu__list__item"><a href="">Demos</a></li>
 						<li class="footerMenu__list__item"><a href="">Blog</a></li>
 						<li class="footerMenu__list__item"><a href="">Contact</a></li>
-						<img class="footerMenuImg" src="img/logf.png" alt="Logo">
-					</ul>
+					</ul>					
 				</div>
+				<img class="footerMenuImg" src="img/logf.png" alt="Logo">
 			</section>
 			<!--end footer section-->
 
